otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   AutoPilot class
      1) added several new slots that define default pilot flight actions or 
         characteristics, such as the maximum rate of turn, bank angle, max
         climb, etc.  These are pilot characteristics in defining how a plane
         is flown -- not physical performance characteristics associated with
         the vehicle itself.

   AngleOnlyTrackManager class
      1) initialized a few previously uninitialized variables -- the initialization
         didn't matter, but we like to adhere to coding stds.

   DynamicsModels class
      1) set commanded heading, velocity, and altitude now take additional
         parameters to define change rates.

   RfSensor class
      1) Updated serialize method

   RfSystem class
      1) Updated serialize method

   ScanGimbal class
      1) Updated serialize method

   Simulation class
      1) updateData() -- corrected the delta time being passed to updateBgPlayerList()
         when more than one background thread is being used (bug fix)

   Station class
      1) added slots to set the stack size of the default time critical,
      network and background threads.

   TrackManager class
      1) converted several local member function arrays to class member arrays.

   Weapon class
      1) added storage for target velocity data

--------------------------------------------------------------------------------
vehicle

   JSBSimModel class
      1) interface updated to account for changes in base DynamicsModels class

   RacModel class
      1) interface updated to account for changes in base DynamicsModels class

   LaeroModel class
      1) added new simple, lightweight aero model

--------------------------------------------------------------------------------
