@@ -112,6 +112,7 @@ simulation
    Simulation class
       1) updateData() -- corrected the delta time being passed to updateBgPlayerList()
          when more than one background thread is being used (bug fix)
+      2) updated timing calculations so that a simulation can run very slowly (< 1 Hz)
 
    Station class
       1) added slots to set the stack size of the default time critical,
